--- a/latex/tikz/preamble.tex
+++ b/latex/tikz/preamble.tex
@@ -1,4 +1,9 @@
 % !TeX root = document.tex
 \documentclass[tikz, border=10pt]{standalone}
 
-\usetikzlibrary{quotes}
+\usetikzlibrary{
+	quotes,
+	shapes,
+	positioning
+}
+\usepackage{tikzpeople}
